Fixing preloading bug with hover replacement on mobile scroll

--- a/src/components/appContainer.module.css
+++ b/src/components/appContainer.module.css
@@ -1,5 +1,6 @@
 .appContainer {
     min-height: 100vh;
+    max-width: 100vw;
     flex-flow: column;
     display: flex;
     background-color: var(--darkGrey);
