--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,6 +1,6 @@
 .headerContainer {
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 8%;
     padding: 1vw;
     background-color: #252526;
