--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -40,72 +40,3 @@
     text-transform: uppercase;
 }
 
-.pageLinks {
-    min-height: 270px;
-}
-
-.pageLinks > div {
-    padding: 0;
-}
-
-.fitImage {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.pageLinks > * {
-    display: inline-block;
-    vertical-align: top;
-    width: 100%;
-}
-
-/* Resize the images on the page links so that they fill up the divs */
-.pageLinks a > div {
-    height: 100%;
-}
-
-.overlayContainer {
-    display:block;
-    position: absolute;
-    /*margin-left: 0 !important;*/
-    /*margin-right: 0 !important;*/
-    height: 100%;
-    width:100%;
-    top: 0;
-}
-
-.textOverlay {
-    position: absolute;
-    display: block;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: var(--darkerGrey);
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .5s ease;
-}
-
-.overlayText {
-    display: block;
-    text-align:center;
-    /* white-space: nowrap; */
-    color: white;
-    font-size: 2rem;
-    position: absolute;
-    overflow: hidden;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-}
-
-.pageLinks > div.inViewMobile .textOverlay {
-    height: 100%;
-}
-
-.pageLinks > div.notMobile:hover .textOverlay {
-    height: 100%;
-}
